tests/errors/EmptyData.hs
-- | see: https://github.com/ucsd-progsys/liquidhaskell/issues/1169

module EmptyData where

{-@ data A @-}
data A = B
